# omnex

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.full  Dockerfile.slim  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
benchmarks/prose/: ingress.md  observability.md  persistent-storage.md  securing-traffic.md  service-discovery.md  tasks.json
benchmarks/results/: prose.json  specs.json
benchmarks/specs/: PREREGISTRATION.md  commerce_api.json  tasks.json
docs/: CLIENT_COMPATIBILITY.md  INSTALLATION.md  LOCAL_METRICS.md  RECEIPTS.md  ROADMAP.md  USAGE.md  pitch.md  system-design.md  system-overview.md
src/omnex/: __init__.py  _surface.py  api.py  cli.py  client_setup.py  mcp.py
src/omnex/adapters/: __init__.py  _split.py  base.py  prose.py  spec.py
src/omnex/bench/: baselines.py  metrics.py  report.py  runner.py  tasks.py
src/omnex/doctor/: __init__.py  checks.py  model.py  report.py
src/omnex/integrations/: __init__.py  _common.py  langchain.py  llamaindex.py
src/omnex/ir/: graph.py  types.py
src/omnex/kernel/: bundle.py  config.py  expand.py  fusion.py  index.py  kernel.py  packer.py  receipt.py  vector.py
src/omnex/metrics/: __init__.py  recorder.py  savings.py  settings.py  store.py  summary.py
tests/: conftest.py  test_api.py  test_cli.py  test_doctor.py  test_install_client.py  test_integrations.py  test_mcp.py  test_metrics.py  test_prose_e2e.py  test_smoke.py  test_spec_e2e.py
tests/adapters/: test_base.py  test_prose_link.py  test_prose_parse.py  test_spec_link.py  test_spec_parse.py
tests/bench/: test_baselines.py  test_metrics.py  test_prose_runner.py  test_runner.py
tests/fixtures/: fk_schema.json  payments_openapi.json
tests/fixtures/tls_docs/: ingress.md  securing-traffic.md  service-discovery.md
tests/ir/: test_graph.py  test_types.py
tests/kernel/: test_bundle.py  test_closure.py  test_expand.py  test_fusion.py  test_index.py  test_kernel.py  test_packer.py  test_receipt.py  test_t2_receipt.py  test_vector_lane.py
